[tool.poetry]
name = "binance-bot"
version = "0.1.0"
description = ""
authors = ["Alexey Malykh <malykhsey@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.0.0"
selenium-wire = "^4.5.5"
requests = "^2.26.0"
webdriver-manager = "^3.5.2"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
